--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
 
 <p>Vix dico eius nominati cu, ex zril commodo fuisset mea. Habeo adhuc audiam ius no. In quis virtute officiis has. Vix ad honestatis accommodare, quis virtute et sit, pertinax expetenda eam id. Duo an fuisset delectus dissentias, justo altera ea per.</p>
 
+ 
+
+<head>
+  <!-- add the button style & script -->
+  <link rel="stylesheet" href="src/applause-button.css" />
+  <script src="src/applause-button.js"></script>
+</head>
+<body>
+  <!-- add the button! -->
+  <applause-button style="width: 58px; height: 58px;"/>
+</body>
+
+
+
           
           
 <iframe width="560" height="315" src="https://www.youtube.com/embed/N_iW0VC3IdI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
