--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </head>
 <body>
   <!-- add the button! -->
-  <applause-button style="width: 58px; height: 58px;"/>
+  <applause-button url="https://ultralegendz.github.io/1/" multiclap="true" style="width: 58px; height: 58px;"/>
 </body>
 
 
